[package]
name = "benchmarking"
version = "0.1.0"
edition = "2024"

[dependencies]
mycelium_computing = { path = "../core" }
dust_dds = { git = "https://github.com/s2e-systems/dust-dds.git", rev = "64f6052e996a6e9f5802d7fc5566d1d99517ace3" }
rand = "0.10.0-rc.5"
smol = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.32"

[[bin]]
name = "request_response_consumer"
path = "src/request_response/consumer.rs"

[[bin]]
name = "request_response_provider"
path = "src/request_response/provider.rs"
