[package]
name = "mycelium_computing"
version = "0.1.0"
edition = "2024"

[dependencies]
dust_dds =  { git = "https://github.com/s2e-systems/dust-dds.git", branch = "main", default-features = false, features = ["dcps", "rtps", "transport"] }
futures = "0.3.31"
futures-timer = "3.0.3"
futures-channel = "0.3.31"
mycelium_computing_macros = { path = "../macros" }
