[package]
name = "mycelium_computing"
version = "0.1.0"
edition = "2024"

[dependencies]
dust_dds = { git = "https://github.com/s2e-systems/dust-dds.git", rev = "64f6052e996a6e9f5802d7fc5566d1d99517ace3", default-features = false, features = ["dcps", "rtps"] }
futures = "0.3.31"
futures-timer = "3.0.3"
futures-channel = "0.3.31"
mycelium_computing_macros = { path = "../macros" }
