[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
mycelium_computing = { path = "../core" }
dust_dds = { git = "https://github.com/s2e-systems/dust-dds.git", rev = "64f6052e996a6e9f5802d7fc5566d1d99517ace3" }
futures = "0.3.31"
futures-timer = "3.0.3"
futures-channel = "0.3.31"
smol = "2.0.2"

[dependencies]
rayon = "1.11.0"
serial_test = "3.2.0"
